--- a/estilos.css
+++ b/estilos.css
@@ -100,13 +100,10 @@
 
  }
 
- @media (max-width: 1200px) {
+ @media (max-width: 75em ){ 
     .contenedor {
         display: flex;
         flex-direction: row;
-    }
-    .encriptador {
-        width: 100%;
     }
     .logo {
         padding: 30px;
@@ -146,7 +143,7 @@
     .mensaje {
         width: 688px;
         height: 133px;
-        top: 800px;
+        top: 0px;
         left: 40px;
         border-radius: 32px;
         padding: 32px;
@@ -159,8 +156,80 @@
     }
  } 
 
- @media (max-width: 430px){
-    .botones{
-    flex-direction: column;
+ @media (max-width: 550px) {
+    .contenedor {
+        display: flex;
+        flex-direction: row;
+        
     }
- }
+    .logo {
+        width: 70px; 
+        height: 30px;
+        left: 10px;
+        top: 5px;
+        padding: 10px;
+        margin: 5px;
+    }
+    .texto {
+        font-size: 37px;
+        width: 288px;
+        font-size: 25px;
+        height: 248px;
+        left: 30px;
+        top: 120px;
+    }
+     .condiciones {
+        width: 229px;
+        left: 100px;
+        top: 386px;
+        left: 40px;
+        gap: 8px;
+        font-size: 10px;
+        align-items: center; 
+    }
+    .botones {
+        flex-direction: column;
+        width: 550px;
+        left: 50px;
+        top: 420px;
+        gap: 14px;
+        height: 237px;
+        padding: 10px;
+        margin: 5px;
+    }
+    .encriptado {
+        align-items: center;
+        width: 258px;
+        height: 193px;
+        top: 625px;
+        left: 40px;
+        border-radius: 32px;
+        padding: 32px;
+        gap: 32px;
+    }
+    .mensaje {
+        width: 228px;
+        height: 83px;
+        top: 10px;
+        left: 20px;
+        border-radius: 32px;
+        padding: 32px;
+        gap: 32px;  
+    }
+    .boton-encriptar {
+        width: 260px; 
+     }
+     .boton-desencriptar {
+        width: 260px;
+     }
+     .copiar {
+        width: 260px;
+        padding: 20px;
+     }
+     .mensaje-encriptado h1 {
+        font-size: 24px;
+     }
+     .mensaje-encriptado p {
+        font-size: 14px;
+     }
+}
